# llm_flow

./: README.md  pyproject.toml
configs/: local_example.yaml  qwen.yaml  tinyllama_example.yaml  tinyllama_power.yaml  tinyllama_violence.yaml
data/: aip_prep.db  saas.aws.csv  saas.csv  violence2.csv  war_demon_tinyllama_power_qa_200.csv
data/plugins/: 124f008d-ca82-42c2-a14c-9a6ea477d16f_lightning_module_ben2.py  17001918-d6c1-4739-9798-17871e8ef6dc_dataloaders_benloader.py  49e93c0c-cf0a-415d-b174-12701a8ef611_lightning_module_sin.py  81c48303-740b-426c-b963-5e604375157f_lightning_module_ben.py  83a72b99-8ce3-4ff9-93c2-ce8058b3a8a9_dataloaders_sin_data.py  fb0ff3b2-3764-4db4-abd7-bbe7e3730db0_benchmark_sin_bench.py
data/uploads/: 2f760d9d-cfe4-4394-aca2-f3257c17c7cd_violent_power.csv  5e96fc66-c327-4211-813f-a535f7dbde93_violence.csv  749471e0-c0bb-40ae-a3d5-0d9832e832f0_violence2.csv  9c56d73d-14f0-42ba-9a87-dbd2a2cfe182_violence2 copy.csv  efe8785b-4b16-4a54-a247-d0c3c440f365_diplomat.csv
src/: __init__.py  api.py  benchmark.py  callbacks.py  causal_lm_runner.py  config.py  custom_lightning_plugin_benchmark_runner.py  custom_lightning_runner.py  custom_lightning_sin_benchmark_runner.py  explainer.py  flask_app.py  llm_training.py  masked_lm_runner.py  meta_features.py  models.py  optimizer.py  predictor.py  probe.py  remote_runner.py  ssh_client.py  storage.py  synthetic_meta.py  training.py  viz.py
src/aip_c01_prep/: api.py  benchmark.py  callbacks.py  cli.py  config.py  data.py  flask_app.py  (+6 more)
tests/: q_a.py  test_benchmark_loader.py  tinyllama_eval.py
(+60 files in other folders)
