[project]
name = "aip-c01-prep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.1",
    "datasets>=3.0.1",
    "evaluate>=0.4.3",
    "fastapi>=0.115.0",
    "flask>=3.0.0",
    "lightgbm>=4.0.0",
    "pandas>=2.2.3",
    "paramiko>=3.4.0",
    "peft>=0.13.2",
    "pydantic>=2.9.2",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.2",
    "plotly>=5.24.1",
    "requests>=2.32.0",
    "scikit-learn>=1.3.0",
    "shap>=0.43.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "lightning>=2.4.0",
    "transformers>=4.57.3",
    "typer>=0.12.5",
    "uvicorn>=0.32.0",
    "sacrebleu>=2.4.0",
    "rouge_score>=0.1.2",
]
